User preference migration to DB Done